--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "publish": "npm version patch && npm publish --access public && exit 1",
     "minify": "uglifyjs index.js -o index.js -c -m",
     "binary": "npx pkg . --compress GZip",
-    "obfuscator": "javascript-obfuscator main.js --output index.js --compact true --self-defending true --control-flow-flattening true --control-flow-flattening-threshold 1 --dead-code-injection true --dead-code-injection-threshold 1 --identifiers-prefix abc --rename-globals true",
+    "obfuscator": "npx javascript-obfuscator main.js --output index.js --compact true --self-defending true --control-flow-flattening true --control-flow-flattening-threshold 1 --dead-code-injection true --dead-code-injection-threshold 1 --identifiers-prefix abc --rename-globals true --disable-console-output true --string-array true --identifiers-prefix prefix_",
     "test": "echo \"Error: no test specified\""
   },
   "repository": {
